--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 600px) {
 
     header {
         margin: 0 0 0 0;
@@ -231,7 +231,7 @@ footer {
     }
 
     .header-bar-container svg {
-        background-color: aquamarine;
+        /* background-color: aquamarine; */
 
         width: 140%;
 
