--- a/style.css
+++ b/style.css
@@ -15,32 +15,41 @@ body {
 
 header {
     height: 90vh;
-    /*background-color: aquamarine; */
+    width: 100%;
+    /* background-color: aquamarine; */
 }
 
 .header-bar-container {
-    /*background-color: aquamarine; */
+    /* background-color: aquamarine; */
 
     position: absolute;
 
-    width: 70%;
+    width: 100%;
     height: 40%;
 
-    margin-left: 14%;
-    margin-top: 10%;
+    margin-left: 0%;
+    margin-top: 0%;
 }
 
 .header-bar-container svg {
-    width: 100%;
-    height: 100%;
+    width: 85%;
+    height: 110%;
+
+    margin-top: 10%;
+    margin-left: 10%;
 }
 
 .header-bar-container h3  {
+    /* background-color: aquamarine; */
+
+    width: 100%;
+
     font-size: 50;
     
     font-weight: 800;
 
-    margin-left: 30%;
+    margin-left: 0%;
+    margin-right: 0;
     margin-top: 11%;
 }
 
@@ -126,7 +135,7 @@ header {
 
     min-width: 260px;
 
-    margin-right: 8vw;
+    margin-right: 5vw;
 }
 
 .say-hello {
@@ -199,17 +208,17 @@ footer {
     text-align: center;
 }
 
-@media screen and (max-width: 1473px) {
+@media screen and (max-width: 1000px) {
     .image-gallery ul {
         flex-wrap: wrap;
         justify-content: center;
 
-        margin: 0 0 0 20;
+        margin: 0 0 0 10%;
         padding: 0 0 0 0;
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 827px) {
 
     header {
         margin: 0 0 0 0;
@@ -224,7 +233,7 @@ footer {
 
         width: 100%;
         font-size: 45;
-        margin: 5% 0 0 25%;
+        margin: 0% 0 0 25%;
 
         text-align: left;
         
@@ -243,11 +252,13 @@ footer {
     }
 
     .say-hello {
+        /* background-color: #FFF5EA; */
+
         flex-wrap: wrap;
     }
 
     .say-hello h2 {
-        margin: 0 0 10 70;
+        margin: 100px 10% 0 0;
         padding: 0 0 0 0;
     }
 
@@ -266,5 +277,11 @@ footer {
     footer p {
         padding-left: 15px;
         padding-right: 15px;
+    }
+}
+
+@media screen and (max-width: 595px) {
+    .say-hello h2 {
+        margin: 0px 0px 0px 12%;
     }
 }
