--- a/responsive/style.css
+++ b/responsive/style.css
@@ -13,7 +13,7 @@ em br {
 }
 
 div h2 {
-    font-size: 3em;
+    font-size: 3.5em;
     line-height: 1em;
 
     margin-bottom: 1.5em;
@@ -21,10 +21,6 @@ div h2 {
     text-decoration: underline #FF7272;
 
     align-content: center;
-}
-
-.SVGWhiteBox {
-    box-shadow: 5px 5px 0px #0585D5;
 }
 
 .header-bar-container {
@@ -35,125 +31,86 @@ div h2 {
 
     justify-content: center;
 
-    margin-top: 5%;
+    margin-top: 7%;
     /* background-color: aquamarine; */
 }
 
 .header-bar-container svg {
-    /* background-color: aquamarine; */
+    height: 30%;
 
-    height: 40%;
-
-    margin: 0 0 0 0;
+    margin: 8% 0 0 0;
 
     font-size: inherit;
+
+    box-shadow: 18px -16px 0px #0585D5;
 }
 
 .header-bar-container h3 {
     font-size: 2em;
-}
-
-#largeHeader {
-    margin: 0% 0% 0% 3%;
-}
-
-@media screen and (min-width: 390px) {
-    #smallHeader {
-        display: none;
-    }
-
-    #largeHeader {
-        margin: 6% 0% 5% 0;
-    }
-
-    .header-bar-container h3 {
-        margin: -10% 22% 0 18%;
-    }
-}
-
-@media screen and (max-width: 580px) {
-    #smallHeader {
-        display: block;
-        height: 80%;
-    }
-
-    #largeHeader {
-        display: none;
-    }
-
-    .header-bar-container h3 {
-        margin: -18% 2% 0 2%;
-        text-align: center;
-    }
+    padding: 0 0 0 0.5%;
 }
 
 .copy-container div {
     display: flex;
     flex-wrap: wrap;
+    /* flex-flow: column; */
 
     justify-content: center;
 
     margin-bottom: 30%;
 }
 
-.image-gallery {
+.myimages h2 {
+    text-align: center;
+}
+
+.myimages div {
+    display: flex; 
+    flex-wrap: nowrap;
+
+    justify-content: center;
+
+    margin-left: 2%;
+}
+
+.myimages div div {
     display: flex;
     flex-wrap: wrap;
+    
+    margin-right: 5%;
     justify-content: center;
-}
 
-.image-gallery ul {
-    margin: 0;
-    padding: 0 4% 0 4%;
-
-    list-style-type: none;
-}
-
-.image-gallery li {
-    margin-bottom: 20%;
 }
 
 .say-hello {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 
-    justify-content: center;
-
-    margin: 30% 0 50% 0;
+    margin: 10% 0 10% 0;
 }
 
-.say-hello h2 {
-    margin: 0 0 50 0;
-}
-
-.say-hello label {
-    /* background-color: aquamarine; */
-
-    margin: 0 0 0 5%;
-}
-
-.say-hello form input, .say-hello textarea {
+.say-hello form input, #message {
     font-size: 20;
 
     margin-top: 3%;
+    margin-right: 50%;
 
     height: 7vh;
-    width: 80vw;
+    width: 30vw;
 
     display: block;
 
-    border: 5px #0585D5 solid;
-    box-shadow: 10px -10px #0585D5;   
+    font-family: inherit;
+
+    border: 4px #0585D5 solid;
+    box-shadow: 15px -15px #0585D5;   
 }
 
 #message {
     height: 25vh;
-    width: 100%;
 
     resize: none;
     outline: none;
-
-    font-family: inherit;
 }
 
 footer {
@@ -169,4 +126,111 @@ footer {
 
 footer p {
     padding: 0 5% 0 5%;
+}
+
+@media screen and (min-width: 390px) {
+    #smallHeader {
+        display: none;
+    }
+
+    #largeHeader {
+        margin: 6% 0% 5% 0;
+    }
+
+    .header-bar-container h3 {
+        margin: -10% 22% 0 18%;
+    }
+
+    .copy-container div svg {
+        max-width: 30%;
+        max-height: 30%;
+    }
+
+    .say-hello h2 {
+        margin-left: 20%;
+        margin-right: 0vw;
+        margin-top: 30vh;
+        margin-bottom: 100%;
+
+        height: 15%;
+        width: 50vw;
+    }
+    
+}
+
+@media screen and (min-width: 310.2px) {
+    .say-hello form label {
+        margin: 0;
+        margin-left: 5%;
+    }
+
+    .say-hello form input, #message {
+        margin-top: 5%;
+        margin-bottom: 3%;
+    }
+}
+
+/* @media screen and (max-width: 310.2px) {
+    .say-hello form input, #message {
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+} */
+
+@media screen and (max-width: 580px) {
+    #smallHeader {
+        display: block;
+        height: 80%;
+    }
+
+    #largeHeader {
+        display: none;
+    }
+
+    .header-bar-container h3 {
+        margin: -18% 2% 0 2%;
+        text-align: center;
+    }
+        
+    .myimages div {
+        display: flex; 
+        flex-wrap: wrap;
+    
+        justify-content: center;
+
+        margin-left: 2%;
+    }
+
+    .say-hello {
+        display: flex;
+        flex-wrap: wrap;
+
+        justify-content: center;
+    }
+
+    .say-hello h2 {
+        text-align: center;
+
+        margin: 0 0 0 0;
+        margin-bottom: 5vh;
+    }
+
+    .say-hello form label {
+        margin-left: 5%;
+    }
+
+    .say-hello form input, #message {
+        margin: 0;
+        width: 80vw;
+
+        margin-top: 4%;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (min-width: 725px) {
+    .say-hello form input, #message {
+        margin-top: 3.5%;
+        margin-bottom: 3%;
+    }
 }
