--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html { box-sizing: border-box; margin:0; padding: 0; }
 /* END OF DEBUGGING SECTION */
 
 #redDots {
-    height: 100%;
-    width: 99%;
+    max-height: 100%;
+    min-width: 99%;
 
     margin:  -7% 0 0 0;
     padding: 0;
@@ -179,8 +179,8 @@ footer p {
     }
 
     .copy-container div svg {
-        max-width: 30%;
-        max-height: 30%;
+        width: 30%;
+        height: 30%;
     }
 
     .say-hello h2 {
