--- a/style.css
+++ b/style.css
@@ -36,7 +36,9 @@ div h2 {
 
     margin-bottom: 1.5em;
 
-    text-decoration: underline #FF7272;
+    text-decoration: underline;
+    text-decoration-color: #FF7272;
+    -webkit-text-decoration-color: #FF7272;
 
     align-content: center;
 }
@@ -67,6 +69,10 @@ div h2 {
 .header-bar-container h3 {
     font-size: 2.5em;
     padding: 0 0 0 3%;
+
+    text-decoration: underline;
+    -webkit-text-decoration-color: #FF7272;
+
 }
 
 .copy-container div {
