--- a/style.css
+++ b/style.css
@@ -22,8 +22,12 @@ html { box-sizing: border-box; margin:0; padding: 0; }
 }
 
 body {
-    font-family: 'Avenir', 'Gotham';
+    /* font-family: 'Avenir', 'Montserrat'; */
+    font-family: 'Montserrat', 'Avenir';
     background-color: #FFF5EA;
+
+    /* Unfortunatly this only works on firefox :( */
+    font-size-adjust: 0.475;
 }
 
 em br {
